# tessfov

./: 404.html  LICENSE  Makefile  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: tests.yml
api/: index.html
docs/: README.md  api.md
search/: search_index.json
src/tessfov/: __init__.py  tessfov.py
src/tessfov/data/: tess_params.csv
tests/: test_tessfov.py
