[tool.poetry]
name = "tessfov"
version = "0.1.0"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
tess-point = "^0.7.1"
matplotlib = "^3.5.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.13"
mkdocstrings = "^0.18.1"
jupyterlab = "<3.1.0"
mkdocs-include-markdown-plugin = "^3.4.0"
pytkdocs = {version = "^0.16.1", extras = ["numpy-style"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
